PBI #20918 Fix vertical align of dayoff.

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
@@ -381,6 +381,7 @@
 }
 
 .shift-trade-dayoff {
+	padding-top: 4px;
 	text-align: center;
 	width:100%; 
 	height: 100%
